--- a/Lista_de_quehaceres/src/App.css
+++ b/Lista_de_quehaceres/src/App.css
@@ -4,10 +4,13 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    
 }
 .tareas-input{
     font-size: 20px;
     margin-right: 10px;
+    width: 400px;
+    height: auto;
 }
 
 .tareas-input-button{
@@ -21,9 +24,14 @@
     border: none;
     display: flex;
     justify-content: space-between;
+    margin: 10px;
+    padding: 5px;
+    border: solid #122;
+    
 }
 .tareas-text{
     margin: 5px;
+    overflow: auto;
 }
 
 .tareas-check{
